// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/components/pages/users/ClearStatus.vue snapshot test ({ loading: true }) renders loading 1`] = `
<div class="b-table">
  <!---->
  <!---->
  <!---->
  <!---->
  <!---->
  <!---->
  <!---->
  <!---->
  <!---->
  <!---->
  <!---->
  <!---->
  <div class="table-wrapper table-container">
    <table class="table is-narrow">
      <!---->
      <thead>
        <tr>
          <!---->
          <!---->
          <th draggable="false" class="is-sticky">
            <div class="th-wrap is-numeric"><span class="is-relative"> Lv <span class="icon sort-icon is-small is-invisible"><i class="mdi mdi-arrow-up"></i></span></span></div>
          </th>
          <th draggable="false" class="">
            <div class="th-wrap is-numeric"><span class="is-relative"> MFC <span class="icon sort-icon is-small is-invisible"><i class="mdi mdi-arrow-up"></i></span></span></div>
          </th>
          <th draggable="false" class="">
            <div class="th-wrap is-numeric"><span class="is-relative"> PFC <span class="icon sort-icon is-small is-invisible"><i class="mdi mdi-arrow-up"></i></span></span></div>
          </th>
          <th draggable="false" class="">
            <div class="th-wrap is-numeric"><span class="is-relative"> GreatFC <span class="icon sort-icon is-small is-invisible"><i class="mdi mdi-arrow-up"></i></span></span></div>
          </th>
          <th draggable="false" class="">
            <div class="th-wrap is-numeric"><span class="is-relative"> FC <span class="icon sort-icon is-small is-invisible"><i class="mdi mdi-arrow-up"></i></span></span></div>
          </th>
          <th draggable="false" class="">
            <div class="th-wrap is-numeric"><span class="is-relative"> Life4 <span class="icon sort-icon is-small is-invisible"><i class="mdi mdi-arrow-up"></i></span></span></div>
          </th>
          <th draggable="false" class="">
            <div class="th-wrap is-numeric"><span class="is-relative"> Clear <span class="icon sort-icon is-small is-invisible"><i class="mdi mdi-arrow-up"></i></span></span></div>
          </th>
          <th draggable="false" class="">
            <div class="th-wrap is-numeric"><span class="is-relative"> Assisted <span class="icon sort-icon is-small is-invisible"><i class="mdi mdi-arrow-up"></i></span></span></div>
          </th>
          <th draggable="false" class="">
            <div class="th-wrap is-numeric"><span class="is-relative"> Failed <span class="icon sort-icon is-small is-invisible"><i class="mdi mdi-arrow-up"></i></span></span></div>
          </th>
          <th draggable="false" class="">
            <div class="th-wrap is-numeric"><span class="is-relative"> NoPlay <span class="icon sort-icon is-small is-invisible"><i class="mdi mdi-arrow-up"></i></span></span></div>
          </th>
          <!---->
        </tr>
        <!---->
        <!---->
      </thead>
      <tbody>
        <tr class="is-empty">
          <td colspan="10"></td>
        </tr>
      </tbody>
      <!---->
    </table>
    <transition-stub name="fade">
      <div class="loading-overlay is-active">
        <div class="loading-background"></div>
        <div class="loading-icon"></div>
      </div>
    </transition-stub>
  </div>
  <!---->
</div>
`;

exports[`/components/pages/users/ClearStatus.vue snapshot test ({ statuses: [...] }) renders clearLamp list 1`] = `
<div class="b-table">
  <!---->
  <!---->
  <!---->
  <!---->
  <!---->
  <!---->
  <!---->
  <!---->
  <!---->
  <!---->
  <!---->
  <!---->
  <div class="table-wrapper table-container">
    <table class="table is-narrow">
      <!---->
      <thead>
        <tr>
          <!---->
          <!---->
          <th draggable="false" class="is-sticky">
            <div class="th-wrap is-numeric"><span class="is-relative"> Lv <span class="icon sort-icon is-small is-invisible"><i class="mdi mdi-arrow-up"></i></span></span></div>
          </th>
          <th draggable="false" class="">
            <div class="th-wrap is-numeric"><span class="is-relative"> MFC <span class="icon sort-icon is-small is-invisible"><i class="mdi mdi-arrow-up"></i></span></span></div>
          </th>
          <th draggable="false" class="">
            <div class="th-wrap is-numeric"><span class="is-relative"> PFC <span class="icon sort-icon is-small is-invisible"><i class="mdi mdi-arrow-up"></i></span></span></div>
          </th>
          <th draggable="false" class="">
            <div class="th-wrap is-numeric"><span class="is-relative"> GreatFC <span class="icon sort-icon is-small is-invisible"><i class="mdi mdi-arrow-up"></i></span></span></div>
          </th>
          <th draggable="false" class="">
            <div class="th-wrap is-numeric"><span class="is-relative"> FC <span class="icon sort-icon is-small is-invisible"><i class="mdi mdi-arrow-up"></i></span></span></div>
          </th>
          <th draggable="false" class="">
            <div class="th-wrap is-numeric"><span class="is-relative"> Life4 <span class="icon sort-icon is-small is-invisible"><i class="mdi mdi-arrow-up"></i></span></span></div>
          </th>
          <th draggable="false" class="">
            <div class="th-wrap is-numeric"><span class="is-relative"> Clear <span class="icon sort-icon is-small is-invisible"><i class="mdi mdi-arrow-up"></i></span></span></div>
          </th>
          <th draggable="false" class="">
            <div class="th-wrap is-numeric"><span class="is-relative"> Assisted <span class="icon sort-icon is-small is-invisible"><i class="mdi mdi-arrow-up"></i></span></span></div>
          </th>
          <th draggable="false" class="">
            <div class="th-wrap is-numeric"><span class="is-relative"> Failed <span class="icon sort-icon is-small is-invisible"><i class="mdi mdi-arrow-up"></i></span></span></div>
          </th>
          <th draggable="false" class="">
            <div class="th-wrap is-numeric"><span class="is-relative"> NoPlay <span class="icon sort-icon is-small is-invisible"><i class="mdi mdi-arrow-up"></i></span></span></div>
          </th>
          <!---->
        </tr>
        <!---->
        <!---->
      </thead>
      <tbody>
        <tr draggable="false" class="">
          <!---->
          <!---->
          <td data-label="Lv" class="has-text-right is-sticky">
            1
          </td>
          <td data-label="MFC" class="has-text-right">
            90
          </td>
          <td data-label="PFC" class="has-text-right">
            80
          </td>
          <td data-label="GreatFC" class="has-text-right">
            70
          </td>
          <td data-label="FC" class="has-text-right">
            60
          </td>
          <td data-label="Life4" class="has-text-right">
            50
          </td>
          <td data-label="Clear" class="has-text-right">
            40
          </td>
          <td data-label="Assisted" class="has-text-right">
            30
          </td>
          <td data-label="Failed" class="has-text-right">
            20
          </td>
          <td data-label="NoPlay" class="has-text-right">
            10
          </td>
          <!---->
        </tr>
        <transition-stub name="">
          <!---->
        </transition-stub>
        <!---->
        <tr draggable="false" class="">
          <!---->
          <!---->
          <td data-label="Lv" class="has-text-right is-sticky">
            2
          </td>
          <td data-label="MFC" class="has-text-right">
            90
          </td>
          <td data-label="PFC" class="has-text-right">
            80
          </td>
          <td data-label="GreatFC" class="has-text-right">
            70
          </td>
          <td data-label="FC" class="has-text-right">
            60
          </td>
          <td data-label="Life4" class="has-text-right">
            50
          </td>
          <td data-label="Clear" class="has-text-right">
            40
          </td>
          <td data-label="Assisted" class="has-text-right">
            30
          </td>
          <td data-label="Failed" class="has-text-right">
            20
          </td>
          <td data-label="NoPlay" class="has-text-right">
            10
          </td>
          <!---->
        </tr>
        <transition-stub name="">
          <!---->
        </transition-stub>
        <!---->
        <tr draggable="false" class="">
          <!---->
          <!---->
          <td data-label="Lv" class="has-text-right is-sticky">
            3
          </td>
          <td data-label="MFC" class="has-text-right">
            90
          </td>
          <td data-label="PFC" class="has-text-right">
            80
          </td>
          <td data-label="GreatFC" class="has-text-right">
            70
          </td>
          <td data-label="FC" class="has-text-right">
            60
          </td>
          <td data-label="Life4" class="has-text-right">
            50
          </td>
          <td data-label="Clear" class="has-text-right">
            40
          </td>
          <td data-label="Assisted" class="has-text-right">
            30
          </td>
          <td data-label="Failed" class="has-text-right">
            20
          </td>
          <td data-label="NoPlay" class="has-text-right">
            10
          </td>
          <!---->
        </tr>
        <transition-stub name="">
          <!---->
        </transition-stub>
        <!---->
        <tr draggable="false" class="">
          <!---->
          <!---->
          <td data-label="Lv" class="has-text-right is-sticky">
            4
          </td>
          <td data-label="MFC" class="has-text-right">
            90
          </td>
          <td data-label="PFC" class="has-text-right">
            80
          </td>
          <td data-label="GreatFC" class="has-text-right">
            70
          </td>
          <td data-label="FC" class="has-text-right">
            60
          </td>
          <td data-label="Life4" class="has-text-right">
            50
          </td>
          <td data-label="Clear" class="has-text-right">
            40
          </td>
          <td data-label="Assisted" class="has-text-right">
            30
          </td>
          <td data-label="Failed" class="has-text-right">
            20
          </td>
          <td data-label="NoPlay" class="has-text-right">
            10
          </td>
          <!---->
        </tr>
        <transition-stub name="">
          <!---->
        </transition-stub>
        <!---->
        <tr draggable="false" class="">
          <!---->
          <!---->
          <td data-label="Lv" class="has-text-right is-sticky">
            5
          </td>
          <td data-label="MFC" class="has-text-right">
            90
          </td>
          <td data-label="PFC" class="has-text-right">
            80
          </td>
          <td data-label="GreatFC" class="has-text-right">
            70
          </td>
          <td data-label="FC" class="has-text-right">
            60
          </td>
          <td data-label="Life4" class="has-text-right">
            50
          </td>
          <td data-label="Clear" class="has-text-right">
            40
          </td>
          <td data-label="Assisted" class="has-text-right">
            30
          </td>
          <td data-label="Failed" class="has-text-right">
            20
          </td>
          <td data-label="NoPlay" class="has-text-right">
            10
          </td>
          <!---->
        </tr>
        <transition-stub name="">
          <!---->
        </transition-stub>
        <!---->
        <tr draggable="false" class="">
          <!---->
          <!---->
          <td data-label="Lv" class="has-text-right is-sticky">
            6
          </td>
          <td data-label="MFC" class="has-text-right">
            90
          </td>
          <td data-label="PFC" class="has-text-right">
            80
          </td>
          <td data-label="GreatFC" class="has-text-right">
            70
          </td>
          <td data-label="FC" class="has-text-right">
            60
          </td>
          <td data-label="Life4" class="has-text-right">
            50
          </td>
          <td data-label="Clear" class="has-text-right">
            40
          </td>
          <td data-label="Assisted" class="has-text-right">
            30
          </td>
          <td data-label="Failed" class="has-text-right">
            20
          </td>
          <td data-label="NoPlay" class="has-text-right">
            10
          </td>
          <!---->
        </tr>
        <transition-stub name="">
          <!---->
        </transition-stub>
        <!---->
        <tr draggable="false" class="">
          <!---->
          <!---->
          <td data-label="Lv" class="has-text-right is-sticky">
            7
          </td>
          <td data-label="MFC" class="has-text-right">
            90
          </td>
          <td data-label="PFC" class="has-text-right">
            80
          </td>
          <td data-label="GreatFC" class="has-text-right">
            70
          </td>
          <td data-label="FC" class="has-text-right">
            60
          </td>
          <td data-label="Life4" class="has-text-right">
            50
          </td>
          <td data-label="Clear" class="has-text-right">
            40
          </td>
          <td data-label="Assisted" class="has-text-right">
            30
          </td>
          <td data-label="Failed" class="has-text-right">
            20
          </td>
          <td data-label="NoPlay" class="has-text-right">
            10
          </td>
          <!---->
        </tr>
        <transition-stub name="">
          <!---->
        </transition-stub>
        <!---->
        <tr draggable="false" class="">
          <!---->
          <!---->
          <td data-label="Lv" class="has-text-right is-sticky">
            8
          </td>
          <td data-label="MFC" class="has-text-right">
            90
          </td>
          <td data-label="PFC" class="has-text-right">
            80
          </td>
          <td data-label="GreatFC" class="has-text-right">
            70
          </td>
          <td data-label="FC" class="has-text-right">
            60
          </td>
          <td data-label="Life4" class="has-text-right">
            50
          </td>
          <td data-label="Clear" class="has-text-right">
            40
          </td>
          <td data-label="Assisted" class="has-text-right">
            30
          </td>
          <td data-label="Failed" class="has-text-right">
            20
          </td>
          <td data-label="NoPlay" class="has-text-right">
            10
          </td>
          <!---->
        </tr>
        <transition-stub name="">
          <!---->
        </transition-stub>
        <!---->
        <tr draggable="false" class="">
          <!---->
          <!---->
          <td data-label="Lv" class="has-text-right is-sticky">
            9
          </td>
          <td data-label="MFC" class="has-text-right">
            90
          </td>
          <td data-label="PFC" class="has-text-right">
            80
          </td>
          <td data-label="GreatFC" class="has-text-right">
            70
          </td>
          <td data-label="FC" class="has-text-right">
            60
          </td>
          <td data-label="Life4" class="has-text-right">
            50
          </td>
          <td data-label="Clear" class="has-text-right">
            40
          </td>
          <td data-label="Assisted" class="has-text-right">
            30
          </td>
          <td data-label="Failed" class="has-text-right">
            20
          </td>
          <td data-label="NoPlay" class="has-text-right">
            10
          </td>
          <!---->
        </tr>
        <transition-stub name="">
          <!---->
        </transition-stub>
        <!---->
        <tr draggable="false" class="">
          <!---->
          <!---->
          <td data-label="Lv" class="has-text-right is-sticky">
            10
          </td>
          <td data-label="MFC" class="has-text-right">
            90
          </td>
          <td data-label="PFC" class="has-text-right">
            80
          </td>
          <td data-label="GreatFC" class="has-text-right">
            70
          </td>
          <td data-label="FC" class="has-text-right">
            60
          </td>
          <td data-label="Life4" class="has-text-right">
            50
          </td>
          <td data-label="Clear" class="has-text-right">
            40
          </td>
          <td data-label="Assisted" class="has-text-right">
            30
          </td>
          <td data-label="Failed" class="has-text-right">
            20
          </td>
          <td data-label="NoPlay" class="has-text-right">
            10
          </td>
          <!---->
        </tr>
        <transition-stub name="">
          <!---->
        </transition-stub>
        <!---->
        <tr draggable="false" class="">
          <!---->
          <!---->
          <td data-label="Lv" class="has-text-right is-sticky">
            11
          </td>
          <td data-label="MFC" class="has-text-right">
            90
          </td>
          <td data-label="PFC" class="has-text-right">
            80
          </td>
          <td data-label="GreatFC" class="has-text-right">
            70
          </td>
          <td data-label="FC" class="has-text-right">
            60
          </td>
          <td data-label="Life4" class="has-text-right">
            50
          </td>
          <td data-label="Clear" class="has-text-right">
            40
          </td>
          <td data-label="Assisted" class="has-text-right">
            30
          </td>
          <td data-label="Failed" class="has-text-right">
            20
          </td>
          <td data-label="NoPlay" class="has-text-right">
            10
          </td>
          <!---->
        </tr>
        <transition-stub name="">
          <!---->
        </transition-stub>
        <!---->
        <tr draggable="false" class="">
          <!---->
          <!---->
          <td data-label="Lv" class="has-text-right is-sticky">
            12
          </td>
          <td data-label="MFC" class="has-text-right">
            90
          </td>
          <td data-label="PFC" class="has-text-right">
            80
          </td>
          <td data-label="GreatFC" class="has-text-right">
            70
          </td>
          <td data-label="FC" class="has-text-right">
            60
          </td>
          <td data-label="Life4" class="has-text-right">
            50
          </td>
          <td data-label="Clear" class="has-text-right">
            40
          </td>
          <td data-label="Assisted" class="has-text-right">
            30
          </td>
          <td data-label="Failed" class="has-text-right">
            20
          </td>
          <td data-label="NoPlay" class="has-text-right">
            10
          </td>
          <!---->
        </tr>
        <transition-stub name="">
          <!---->
        </transition-stub>
        <!---->
        <tr draggable="false" class="">
          <!---->
          <!---->
          <td data-label="Lv" class="has-text-right is-sticky">
            13
          </td>
          <td data-label="MFC" class="has-text-right">
            90
          </td>
          <td data-label="PFC" class="has-text-right">
            80
          </td>
          <td data-label="GreatFC" class="has-text-right">
            70
          </td>
          <td data-label="FC" class="has-text-right">
            60
          </td>
          <td data-label="Life4" class="has-text-right">
            50
          </td>
          <td data-label="Clear" class="has-text-right">
            40
          </td>
          <td data-label="Assisted" class="has-text-right">
            30
          </td>
          <td data-label="Failed" class="has-text-right">
            20
          </td>
          <td data-label="NoPlay" class="has-text-right">
            10
          </td>
          <!---->
        </tr>
        <transition-stub name="">
          <!---->
        </transition-stub>
        <!---->
        <tr draggable="false" class="">
          <!---->
          <!---->
          <td data-label="Lv" class="has-text-right is-sticky">
            14
          </td>
          <td data-label="MFC" class="has-text-right">
            90
          </td>
          <td data-label="PFC" class="has-text-right">
            80
          </td>
          <td data-label="GreatFC" class="has-text-right">
            70
          </td>
          <td data-label="FC" class="has-text-right">
            60
          </td>
          <td data-label="Life4" class="has-text-right">
            50
          </td>
          <td data-label="Clear" class="has-text-right">
            40
          </td>
          <td data-label="Assisted" class="has-text-right">
            30
          </td>
          <td data-label="Failed" class="has-text-right">
            20
          </td>
          <td data-label="NoPlay" class="has-text-right">
            10
          </td>
          <!---->
        </tr>
        <transition-stub name="">
          <!---->
        </transition-stub>
        <!---->
        <tr draggable="false" class="">
          <!---->
          <!---->
          <td data-label="Lv" class="has-text-right is-sticky">
            15
          </td>
          <td data-label="MFC" class="has-text-right">
            90
          </td>
          <td data-label="PFC" class="has-text-right">
            80
          </td>
          <td data-label="GreatFC" class="has-text-right">
            70
          </td>
          <td data-label="FC" class="has-text-right">
            60
          </td>
          <td data-label="Life4" class="has-text-right">
            50
          </td>
          <td data-label="Clear" class="has-text-right">
            40
          </td>
          <td data-label="Assisted" class="has-text-right">
            30
          </td>
          <td data-label="Failed" class="has-text-right">
            20
          </td>
          <td data-label="NoPlay" class="has-text-right">
            10
          </td>
          <!---->
        </tr>
        <transition-stub name="">
          <!---->
        </transition-stub>
        <!---->
        <tr draggable="false" class="">
          <!---->
          <!---->
          <td data-label="Lv" class="has-text-right is-sticky">
            16
          </td>
          <td data-label="MFC" class="has-text-right">
            90
          </td>
          <td data-label="PFC" class="has-text-right">
            80
          </td>
          <td data-label="GreatFC" class="has-text-right">
            70
          </td>
          <td data-label="FC" class="has-text-right">
            60
          </td>
          <td data-label="Life4" class="has-text-right">
            50
          </td>
          <td data-label="Clear" class="has-text-right">
            40
          </td>
          <td data-label="Assisted" class="has-text-right">
            30
          </td>
          <td data-label="Failed" class="has-text-right">
            20
          </td>
          <td data-label="NoPlay" class="has-text-right">
            10
          </td>
          <!---->
        </tr>
        <transition-stub name="">
          <!---->
        </transition-stub>
        <!---->
        <tr draggable="false" class="">
          <!---->
          <!---->
          <td data-label="Lv" class="has-text-right is-sticky">
            17
          </td>
          <td data-label="MFC" class="has-text-right">
            90
          </td>
          <td data-label="PFC" class="has-text-right">
            80
          </td>
          <td data-label="GreatFC" class="has-text-right">
            70
          </td>
          <td data-label="FC" class="has-text-right">
            60
          </td>
          <td data-label="Life4" class="has-text-right">
            50
          </td>
          <td data-label="Clear" class="has-text-right">
            40
          </td>
          <td data-label="Assisted" class="has-text-right">
            30
          </td>
          <td data-label="Failed" class="has-text-right">
            20
          </td>
          <td data-label="NoPlay" class="has-text-right">
            10
          </td>
          <!---->
        </tr>
        <transition-stub name="">
          <!---->
        </transition-stub>
        <!---->
        <tr draggable="false" class="">
          <!---->
          <!---->
          <td data-label="Lv" class="has-text-right is-sticky">
            18
          </td>
          <td data-label="MFC" class="has-text-right">
            90
          </td>
          <td data-label="PFC" class="has-text-right">
            80
          </td>
          <td data-label="GreatFC" class="has-text-right">
            70
          </td>
          <td data-label="FC" class="has-text-right">
            60
          </td>
          <td data-label="Life4" class="has-text-right">
            50
          </td>
          <td data-label="Clear" class="has-text-right">
            40
          </td>
          <td data-label="Assisted" class="has-text-right">
            30
          </td>
          <td data-label="Failed" class="has-text-right">
            20
          </td>
          <td data-label="NoPlay" class="has-text-right">
            10
          </td>
          <!---->
        </tr>
        <transition-stub name="">
          <!---->
        </transition-stub>
        <!---->
        <tr draggable="false" class="">
          <!---->
          <!---->
          <td data-label="Lv" class="has-text-right is-sticky">
            19
          </td>
          <td data-label="MFC" class="has-text-right">
            90
          </td>
          <td data-label="PFC" class="has-text-right">
            80
          </td>
          <td data-label="GreatFC" class="has-text-right">
            70
          </td>
          <td data-label="FC" class="has-text-right">
            60
          </td>
          <td data-label="Life4" class="has-text-right">
            50
          </td>
          <td data-label="Clear" class="has-text-right">
            40
          </td>
          <td data-label="Assisted" class="has-text-right">
            30
          </td>
          <td data-label="Failed" class="has-text-right">
            20
          </td>
          <td data-label="NoPlay" class="has-text-right">
            10
          </td>
          <!---->
        </tr>
        <transition-stub name="">
          <!---->
        </transition-stub>
        <!---->
        <!---->
      </tbody>
      <!---->
    </table>
    <!---->
  </div>
  <!---->
</div>
`;
